--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"express-jwt": "^5.3.1",
 		"graphql": "^14.4.2",
 		"jsonwebtoken": "^8.5.1",
+		"multer": "^1.4.2",
 		"nodemailer": "^6.3.0",
 		"pg": "^7.12.0",
 		"pg-hstore": "^2.3.3",
