--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "API with GraphQL",
 	"main": "server.js",
 	"scripts": {
-		"start": "NODE_ENV=development nodemon server.js",
+		"start": "node server.js",
 		"prod": "NODE_ENV=production nodemon server.js",
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
