--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"main": "server.js",
 	"scripts": {
 		"start": "node server.js",
-		"test": "NODE_ENV=production nodemon server.js",
+		"dev": "nodemon server.js",
 		"prod": "NODE_ENV=production pm2 start server.js"
 	},
 	"author": "Dario Velez Roman",
@@ -16,13 +16,13 @@
 		"cors": "^2.8.5",
 		"express": "^4.17.1",
 		"express-graphql": "^0.9.0",
-		"express-jwt": "^6.0.0",
+		"express-jwt": "^6.1.0",
 		"graphql": "^14.4.2",
 		"jsonwebtoken": "^8.5.1",
 		"multer": "^1.4.2",
+		"mysql2": "^2.3.3",
 		"nodemailer": "^6.3.0",
 		"pg": "^7.12.0",
-		"pg-hstore": "^2.3.3",
 		"sequelize": "^5.18.4"
 	},
 	"devDependencies": {
