--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"express-jwt": "^6.1.0",
 		"graphql": "^14.4.2",
 		"jsonwebtoken": "^8.5.1",
+		"mariadb": "^2.5.5",
 		"multer": "^1.4.2",
 		"mysql2": "^2.3.3",
 		"nodemailer": "^6.4.16",
